# Lettro

./: Cargo.toml  README.md  configuration.yaml
migrations/: 20260405125441_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: mod.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/common/: mod.rs
