[package]
name = "lettro"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "lettro"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
hyper = "1.8.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }

[dev-dependencies]
httpc = "0.1.3"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.29.0"
