[package]
name = "lettro"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "lettro"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
config = { version = "0.15.22", features = ["yaml"] }
hyper = "1.8.1"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid", "time"] }
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "registry"] }
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
httpc = "0.1.3"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.29.0"
