[package]
name = "lettro"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "lettro"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
config = { version = "0.15.22", features = ["yaml"] }
hyper = "1.8.1"
once_cell = "1.21.4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid", "time"] }
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full", "rt"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace", "request-id", "trace"] }
tracing = "0.1.44"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "registry"] }
unicode-segmentation = "1.13.2"
uuid = { version = "1.23.0", features = ["v4"] }
validator = { version = "0.20.0"}
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0.149"

[dev-dependencies]
httpc = "0.1.3"
tokio-tungstenite = "0.29.0"
fake = "5.1.0"
claim = "0.5.0"
quickcheck_macros = "1.2.0"
quickcheck = "1.1.0"
wiremock = "0.6.5"
linkify = "0.10.0"
